syntax = "proto3";

package com.github.harti2006.grpc.example;

option java_multiple_files = true;
option java_package = "com.github.harti2006.grpc.example";
option java_outer_classname = "HelloWorldProto";

service MyService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {}

message HelloReply {
  string message = 1;
}